<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ai-republic.bms-to-inverter</groupId>
	<artifactId>bms-to-inverter-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<encoding>UTF-8</encoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<modules>
		<module>core-api</module>
		<module>protocol-rs485</module>
		<module>protocol-can</module>
		<module>protocol-modbus</module>
		<module>bms-byd-can</module>
		<module>bms-daly-common</module>
		<module>bms-daly-can</module>
		<module>bms-daly-rs485</module>
		<module>bms-discover-can</module>
		<module>bms-growatt-can</module>
		<module>bms-growatt-hv-can</module>
		<module>bms-jk-can</module>
		<module>bms-jk-modbus</module>
		<module>bms-jk-rs485</module>
		<module>bms-lia-can</module>
		<module>bms-mppsolar-modbus</module>
		<module>bms-narada-modbus</module>
		<module>bms-pace-can</module>
		<module>bms-pylon-can</module>
		<module>bms-pylon-hv-can</module>
		<module>bms-pylon-rs485</module>
		<module>bms-sacredsun-rs485</module>
		<module>bms-samsung-can</module>
		<module>bms-seplos-can</module>
		<module>bms-shoto-modbus</module>
		<module>bms-sma-si-can</module>
		<module>bms-tian-modbus</module>
		<module>bms-to-inverter-main</module>
		<module>inverter-byd-can</module>
		<module>inverter-deye-can</module>
		<module>inverter-dummy</module>
		<module>inverter-goodwe-can</module>
		<module>inverter-growatt-can</module>
		<module>inverter-growatt-hv-can</module>
		<module>inverter-growatt-modbus</module>
		<module>inverter-growatt-rs485</module>
		<module>inverter-pylon-can</module>
		<module>inverter-pylon-hv-can</module>
		<module>inverter-pylon-rs485</module>
		<module>inverter-solark-can</module>
		<module>inverter-solis-hv-can</module>
		<module>inverter-sma-si-can</module>
		<module>service-mqtt-broker</module>
		<module>service-mqtt-client</module>
		<module>webserver</module>
		<module>configurator</module>
		<module>bms-jbd-rs485</module>
		<module>bms-huawei-modbus</module>
		<module>inverter-huawei-modbus</module>
		<module>bms-dummy</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>2.20.0</version>
		</dependency>

		<dependency>
			<groupId>jakarta.enterprise</groupId>
			<artifactId>jakarta.enterprise.cdi-api</artifactId>
			<version>4.0.1</version>
		</dependency>


		<!-- TEST FRAMEWORKS -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.9.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>3.9.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>